# ngx_url_parser

./: .travis.yml  CMakeLists.txt  Makefile  README.md  configure  configure.ac  example.c  libngx_url_parser.pc.in  makefile  ngx_url_parser.c  ngx_url_parser.h  test.c
tests/: CMakeLists.txt  ngx_url_parser_invalid_test.cpp  ngx_url_parser_simple_test.cpp  ngx_url_parser_test.c  ngx_url_parser_test.cpp
